# NUbots

./: README.md  Vagrantfile  toolchain.py
cmake/Includes/: Compiler.cmake  DarwinSend.cmake
cmake/Modules/: Compiler.cmake  FindDC1394.cmake  FindEigen.cmake  FindNUClear.cmake  FindNURobotX.cmake  RobotSend.cmake  SharedLibraries.cmake  ToolchainLibraryFinder.cmake
module/: NUClearModule.cmake
module/localisation/NetworkLocalisation/: README.md
modules/input/DC1394Camera/: CMakeLists.txt
modules/robotx/Behaviour/: CMakeLists.txt  README.md
modules/robotx/Communicator/: CMakeLists.txt  README.md
modules/robotx/Communicator/config/: Communicator.yaml
modules/robotx/Communicator/src/: Communicator.cpp  Communicator.h  SocketBuffer.cpp  SocketBuffer.h  TcpClientStream.cpp  TcpClientStream.h  TcpServerStream.cpp  TcpServerStream.h
modules/robotx/SLAM/: README.md
modules/support/NUbugger/: CMakeLists.txt
modules/support/NUbugger/config/: NUbugger.yaml
modules/support/NUbugger/src/: NUbugger.cpp  NUbugger.h  Sensors.cpp  Vision.cpp
modules/support/TDBoxClient/: README.md
modules/vision/BuoyDetector/: README.md
modules/vision/LUT/VisualHorizonFinder/: CMakeLists.txt  README.md
modules/vision/LUT/VisualHorizonFinder/src/: VisualHorizonFinder.cpp  VisualHorizonFinder.h
modules/vision/LUTClassifier/: CMakeLists.txt
nuclear/: CMakeLists.txt
nuclear/message/generator/: Enum.py
nuclear/roles/: generate_role.py
puppet/manifests/: nubots.pp
reel/: __init__.py
roles/: cameratest.role  classifiertester.role  collectdata.role  keyboardclassifier.role  manualoptimisation.role  nbzcam.role  nbzplayer.role  ramrod.role  tdboxtester.role  visualmesh.role  walkfitness.role
shared/message/input/: CameraParameters.h  GameState.proto
shared/message/localisation/: NetworkBall.proto
shared/message/vision/: MeshObjectRequest.h  MeshObjectRequest.proto
shared/messages/input/: GPS.h  Image.h  RobotXState.h  Sensors.h
shared/messages/robotx/: AutonomousMode.h  ControlReference.h  CurrentTask.h  LightSequence.h  UnderwaterPinger.h
shared/messages/vision/: ClassifiedImage.h  ImagePointScan.h  ImageSegmentScan.h  LookUpTable.cpp  LookUpTable.h  VisionObjects.h  VisualHorizon.h
shared/utility/autocal/: CalibrationTools.cpp  CalibrationTools.h  Correlator.cpp  Correlator.h  GraphicsTools.h  LinearFitter.h  MocapRecorder.cpp  MocapRecorder.h  MocapRecording.cpp  MocapRecording.h  MocapStream.cpp  MocapStream.h  SensorPlant.cpp  SensorPlant.h
shared/utility/behaviour/: MotionCommand.h
shared/utility/input/: ServoLoadModel.h
shared/utility/kdtree/: kdtree.h
(+340 files in other folders)
