# Find library
FIND_PACKAGE(NURobotX REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system REQUIRED thread REQUIRED filesystem REQUIRED iostreams REQUIRED)
FIND_PACKAGE(Eigen REQUIRED)

# Build our NUClear module
NUCLEAR_MODULE(INCLUDES  ${EIGEN_INCLUDE_DIRS} ${NUROBOTX_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
                LIBRARIES ${NUROBOTX_LIBRARIES} ${Boost_LIBRARIES})
