# Find libjpeg library
FIND_PACKAGE(JPEG REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(Boost COMPONENTS iostreams REQUIRED)


# Build our NUClear module
NUCLEAR_MODULE(INCLUDES ${JPEG_INCLUDE_DIR} ${ZLIB_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
               LIBRARIES ${JPEG_LIBRARIES} ${ZLIB_LIBRARIES} ${Boost_LIBRARIES})